# sudo

./: .gitignore  DepthCamera_2026-03-18-10-52-55.json  README.md  Utils.py  camere.py  debug.py  environment.yml  estimater.py  main.py  midas_modelfree.py  pyproject.toml  reminder.txt  reminder2.txt  requirements.txt  run_demo.py  run_demo_test.py  test.py  test_demo.py
robot_deployenv_checker-main/: plan.md  pyproject.toml
robot_deployenv_checker-main/configs/: camera_config.json  example_scene.yaml
robot_deployenv_checker-main/hbmp/: main_viser.py  readme.md  scene_config_hb.json  scene_manager.py  wbc_config_hb.yaml
robot_deployenv_checker-main/hbmp/assets/gripper/meshes/visual/: gripper.glb  gripper.ply
robot_deployenv_checker-main/hbmp/assets/hb11/: urdf_c.urdf
robot_deployenv_checker-main/hbmp/assets/hb11/meshes/convex/: base_link.ply  contact_pad.ply  left-link_arm_1.ply  left-link_arm_2.ply  left-link_arm_3.ply  left-link_arm_4.ply  left-link_arm_5.ply  left-link_arm_6.ply  left-link_arm_7.ply  left-link_arm_base.ply  link_ee_camera.ply  (+14 more)
robot_deployenv_checker-main/hbmp/hbmp/: __init__.py  base.py  col.py  common.py  data_hb11.py  data_tianji.py  impl_t2da2.py  rrt.py  traj.py  util.py  wbc.py
robot_deployenv_checker-main/objects/: 25(30)_90(15).stl  2590.stl  25_90_15.stl  35(30)_100(15).stl  35100.stl  35_100_15.stl  shelf_25_100_45_tote_vertical.stl
robot_deployenv_checker-main/src/deployenv_checker/: __main__.py  app.py  camera.py  config.py  gui.py  robot.py  scene.py
robot_deployenv_checker-main/tests/: test_hbmp.py  test_scene_drag.py
(+1932 files in other folders)
